css fixing overflow

--- a/src/components/NewGroup/newgroup.css
+++ b/src/components/NewGroup/newgroup.css
@@ -35,6 +35,7 @@
 }
 
 .newGroupInput{
+   
     background-color:inherit;
     height:280px;
     border-bottom:solid black 2px;
@@ -44,7 +45,7 @@
 
 .friendsDiv{
     margin-top:300px;
-
+    
     
 }
 
@@ -69,7 +70,7 @@
     /* margin-bottom:10px; */
     /* margin-right:10px; */
     transition: all 5s;
-
+    overflow:hidden;
 
 }
 
